--- a/tex/p103.tex
+++ b/tex/p103.tex
@@ -39,7 +39,7 @@
 \vs p103 3:2 \pc Later religion is foreshadowed in the primitive belief in natural wonders and mysteries, the impersonal mana. But sooner or later the evolving religion requires that the individual should make some personal sacrifice for the good of his social group, should do something to make other people happier and better. Ultimately, religion is destined to become the service of God and of man.
 \vs p103 3:3 Religion is designed to change man’s environment, but much of the religion found among mortals today has become helpless to do this. Environment has all too often mastered religion.
 \vs p103 3:4 \pc Remember that in the religion of all ages the experience which is paramount is the feeling regarding moral values and social meanings, not the thinking regarding theologic dogmas or philosophic theories. Religion evolves favourably as the element of magic is replaced by the concept of morals.
-\vs p103 3:5 Man evolved through the superstitions of mana, magic, nature worship, spirit fear, and animal worship to the various ceremonials whereby the religious attitude of the individual became the group reactions of the clan. And then these ceremonies became focalized and crystallized into tribal beliefs, and eventually these fears and faiths became personalized into gods. But in all of this religious evolution the moral element was never wholly absent. The impulse of the God within man was always potent. And these powerful influences --- one human and the other divine --- ensured the survival of religion throughout the vicissitudes of the ages and that notwithstanding it was so often threatened with extinction by 1,000 subversive tendencies and hostile antagonisms.
+\vs p103 3:5 Man evolved through the superstitions of mana, magic, nature worship, spirit fear, and animal worship to the various ceremonials whereby the religious attitude of the individual became the group reactions of the clan. And then these ceremonies became focalized and crystallized into tribal beliefs, and eventually these fears and faiths became personalized into gods. But in all of this religious evolution the moral element was never wholly absent. The impulse of the God within man was always potent. And these powerful influences --- one human and the other divine --- ensured the survival of religion throughout the vicissitudes of the ages and that notwithstanding it was so often threatened with extinction by a thousand subversive tendencies and hostile antagonisms.
 \usection{Spiritual Communion}
 \vs p103 4:1 The characteristic difference between a social occasion and a religious gathering is that in contrast with the secular the religious is pervaded by the atmosphere of \bibemph{communion.} In this way human association generates a feeling of fellowship with the divine, and this is the beginning of group worship. Partaking of a common meal was the earliest type of social communion, and so did early religions provide that some portion of the ceremonial sacrifice should be eaten by the worshippers. Even in Christianity the Lord’s Supper retains this mode of communion. The atmosphere of the communion provides a refreshing and comforting period of truce in the conflict of the self\hyp{}seeking ego with the altruistic urge of the indwelling spirit Monitor. And this is the prelude to true worship --- the practice of the presence of God which eventuates in the emergence of the brotherhood of man.
 \vs p103 4:2 When primitive man felt that his communion with God had been interrupted, he resorted to sacrifice of some kind in an effort to make atonement, to restore friendly relationship. The hunger and thirst for righteousness leads to the discovery of truth, and truth augments ideals, and this creates new problems for the individual religionists, for our ideals tend to grow by geometrical progression, while our ability to live up to them is enhanced only by arithmetical progression.
