--- a/tex/p137.tex
+++ b/tex/p137.tex
@@ -37,7 +37,7 @@
 \vs p137 3:6 \pc On the next day, Tuesday, they all journeyed over to Cana for the wedding of Naomi, which was to take place on the following day. And in spite of Jesus’ repeated warnings that they tell no man about him “until the Father’s hour shall come,” they insisted on quietly spreading the news abroad that they had found the Deliverer. They each confidently expected that Jesus would inaugurate his assumption of Messianic authority at the forthcoming wedding at Cana, and that he would do so with great power and sublime grandeur. They remembered what had been told them about the phenomena attendant upon his baptism, and they believed that his future course on earth would be marked by increasing manifestations of supernatural wonders and miraculous demonstrations. Accordingly, the entire countryside was preparing to gather together at Cana for the wedding feast of Naomi and Johab the son of Nathan.
 \vs p137 3:7 Mary had not been so joyous in years. She journeyed to Cana in the spirit of the queen mother on the way to witness the coronation of her son. Not since he was 13 years old had Jesus’ family and friends seen him so carefree and happy, so thoughtful and understanding of the wishes and desires of his associates, so touchingly sympathetic. And so they all whispered among themselves, in small groups, wondering what was going to happen. What would this strange person do next? How would he usher in the glory of the coming kingdom? And they were all thrilled with the thought that they were to be present to see the revelation of the might and power of Israel’s God.
 \usection{The Wedding at Cana}
-\vs p137 4:1 By noon on Wednesday almost 1,000 guests had arrived in Cana, more than 4 times the number bidden to the wedding feast. It was a Jewish custom to celebrate weddings on Wednesday, and the invitations had been sent abroad for the wedding one month previously. In the forenoon and early afternoon it appeared more like a public reception for Jesus than a wedding. Everybody wanted to greet this near\hyp{}famous Galilean, and he was most cordial to all, young and old, Jew and gentile. And everybody rejoiced when Jesus consented to lead the preliminary wedding procession.
+\vs p137 4:1 By noon on Wednesday almost a thousand guests had arrived in Cana, more than four times the number bidden to the wedding feast. It was a Jewish custom to celebrate weddings on Wednesday, and the invitations had been sent abroad for the wedding one month previously. In the forenoon and early afternoon it appeared more like a public reception for Jesus than a wedding. Everybody wanted to greet this near\hyp{}famous Galilean, and he was most cordial to all, young and old, Jew and gentile. And everybody rejoiced when Jesus consented to lead the preliminary wedding procession.
 \vs p137 4:2 Jesus was now thoroughly self\hyp{}conscious regarding his human existence, his divine pre\hyp{}existence, and the status of his combined, or fused, human and divine natures. With perfect poise he could at one moment enact the human role or immediately assume the personality prerogatives of the divine nature.
 \vs p137 4:3 As the day wore on, Jesus became increasingly conscious that the people were expecting him to perform some wonder; more especially he recognized that his family and his six disciple\hyp{}apostles were looking for him appropriately to announce his forthcoming kingdom by some startling and supernatural manifestation.
 \vs p137 4:4 Early in the afternoon Mary summoned James, and together they made bold to approach Jesus to inquire if he would admit them to his confidence to the extent of informing them at what hour and at what point in connection with the wedding ceremonies he had planned to manifest himself as the “supernatural one.” No sooner had they spoken of these matters to Jesus than they saw they had aroused his characteristic indignation. He said only: \textcolour{ubdarkred}{“If you love me, then be willing to tarry with me while I wait upon the will of my Father who is in heaven.”} But the eloquence of his rebuke lay in the expression of his face.
