--- a/tex/p187.tex
+++ b/tex/p187.tex
@@ -33,7 +33,7 @@
 \vs p187 2:8 As Jesus saw his mother, with John and his brother and sister, he smiled but said nothing. Meanwhile the four soldiers assigned to the Master’s crucifixion, as was the custom, had divided his clothes among them, one taking the sandals, one the turban, one the girdle, and the fourth the cloak. This left the tunic, or seamless vestment reaching down to near the knees, to be cut up into four pieces, but when the soldiers saw what an unusual garment it was, they decided to cast lots for it. Jesus looked down on them while they divided his garments, and the thoughtless crowd jeered at him.
 \vs p187 2:9 \pc It was well that the Roman soldiers took possession of the Master’s clothing. Otherwise, if his followers had gained possession of these garments, they would have been tempted to resort to superstitious relic worship. The Master desired that his followers should have nothing material to associate with his life on earth. He wanted to leave mankind only the memory of a human life dedicated to the high spiritual ideal of being consecrated to doing the Father’s will.
 \usection{Those Who Saw the Crucifixion}
-\vs p187 3:1 At about 9:30 this Friday morning, Jesus was hung upon the cross. Before 11:00, upward of 1,000 persons had assembled to witness this spectacle of the crucifixion of the Son of Man. Throughout these dreadful hours the unseen hosts of a universe stood in silence while they gazed upon this extraordinary phenomenon of the Creator as he was dying the death of the creature, even the most ignoble death of a condemned criminal.
+\vs p187 3:1 At about 9:30 this Friday morning, Jesus was hung upon the cross. Before 11:00, upward of one thousand persons had assembled to witness this spectacle of the crucifixion of the Son of Man. Throughout these dreadful hours the unseen hosts of a universe stood in silence while they gazed upon this extraordinary phenomenon of the Creator as he was dying the death of the creature, even the most ignoble death of a condemned criminal.
 \vs p187 3:2 Standing near the cross at one time or another during the crucifixion were Mary, Ruth, Jude, John, Salome (John’s mother), and a group of earnest women believers including Mary the wife of Clopas and sister of Jesus’ mother, Mary Magdalene, and Rebecca, onetime of Sepphoris. These and other friends of Jesus held their peace while they witnessed his great patience and fortitude and gazed upon his intense sufferings.
 \vs p187 3:3 Many who passed by wagged their heads and, railing at him, said: “You who would destroy the temple and build it again in three days, save yourself. If you are the Son of God, why do you not come down from your cross?” In like manner some of the rulers of the Jews mocked him, saying, “He saved others, but himself he cannot save.” Others said, “If you are the king of the Jews, come down from the cross, and we will believe in you.” And later on they mocked him the more, saying: “He trusted in God to deliver him. He even claimed to be the Son of God --- look at him now --- crucified between two thieves.” Even the two thieves also railed at him and cast reproach upon him.
 \vs p187 3:4 Inasmuch as Jesus would make no reply to their taunts, and since it was nearing noontime of this special preparation day, by 11:30 most of the jesting and jeering crowd had gone its way; less than 50 persons remained on the scene. The soldiers now prepared to eat lunch and drink their cheap, sour wine as they settled down for the long deathwatch. As they partook of their wine, they derisively offered a toast to Jesus, saying, “Hail and good fortune! to the king of the Jews.” And they were astonished at the Master’s tolerant regard of their ridicule and mocking.
