--- a/tex/p189.tex
+++ b/tex/p189.tex
@@ -31,7 +31,7 @@
 \vs p189 2:6 \pc The Christian belief in the resurrection of Jesus has been based on the fact of the “empty tomb.” It was indeed a \bibemph{fact} that the tomb was empty, but this is not the \bibemph{truth} of the resurrection. The tomb was truly empty when the first believers arrived, and this fact, associated with that of the undoubted resurrection of the Master, led to the formulation of a belief which was not true: the teaching that the material and mortal body of Jesus was raised from the grave. Truth having to do with spiritual realities and eternal values cannot always be built up by a combination of apparent facts. Although individual facts may be materially true, it does not follow that the association of a group of facts must necessarily lead to truthful spiritual conclusions.
 \vs p189 2:7 The tomb of Joseph was empty, not because the body of Jesus had been rehabilitated or resurrected, but because the celestial hosts had been granted their request to afford it a special and unique dissolution, a return of the “dust to dust,” without the intervention of the delays of time and without the operation of the ordinary and visible processes of mortal decay and material corruption.
 \vs p189 2:8 The mortal remains of Jesus underwent the same natural process of elemental disintegration as characterizes all human bodies on earth except that, in point of time, this natural mode of dissolution was greatly accelerated, hastened to that point where it became well\hyp{}nigh instantaneous.
-\vs p189 2:9 The true evidences of the resurrection of Michael are spiritual in nature, albeit this teaching is corroborated by the testimony of many mortals of the realm who met, recognized, and communed with the resurrected morontia Master. He became a part of the personal experience of almost 1,000 human beings before he finally took leave of Urantia.
+\vs p189 2:9 The true evidences of the resurrection of Michael are spiritual in nature, albeit this teaching is corroborated by the testimony of many mortals of the realm who met, recognized, and communed with the resurrected morontia Master. He became a part of the personal experience of almost one thousand human beings before he finally took leave of Urantia.
 \usection{The Dispensational Resurrection}
 \vs p189 3:1 A little after 04:30 this Sunday morning, Gabriel summoned the archangels to his side and made ready to inaugurate the general resurrection of the termination of the Adamic dispensation on Urantia. When the vast host of the seraphim and the cherubim concerned in this great event had been marshaled in proper formation, the morontia Michael appeared before Gabriel, saying: \textcolour{ubdarkred}{“As my Father has life in himself, so has he given it to the Son to have life in himself. Although I have not yet fully resumed the exercise of universe jurisdiction, this self\hyp{}imposed limitation does not in any manner restrict the bestowal of life upon my sleeping sons; let the roll call of the planetary resurrection begin.”}
 \vs p189 3:2 The circuit of the archangels then operated for the first time from Urantia. Gabriel and the archangel hosts moved to the place of the spiritual polarity of the planet; and when Gabriel gave the signal, there flashed to the first of the system mansion worlds the voice of Gabriel, saying: “By the mandate of Michael, let the dead of a Urantia dispensation rise!” Then all the survivors of the human races of Urantia who had fallen asleep since the days of Adam, and who had not already gone on to judgment, appeared in the resurrection halls of mansonia in readiness for morontia investiture. And in an instant of time the seraphim and their associates made ready to depart for the mansion worlds. Ordinarily these seraphic guardians, onetime assigned to the group custody of these surviving mortals, would have been present at the moment of their awaking in the resurrection halls of mansonia, but they were on this world itself at this time because of the necessity of Gabriel’s presence here in connection with the morontia resurrection of Jesus.
