--- a/tex/p195.tex
+++ b/tex/p195.tex
@@ -122,7 +122,7 @@
 \vs p195 7:18 \pc Any scientific interpretation of the material universe is valueless unless it provides due recognition for the \bibemph{scientist.} No appreciation of art is genuine unless it accords recognition to the \bibemph{artist.} No evaluation of morals is worth while unless it includes the \bibemph{moralist.} No recognition of philosophy is edifying if it ignores the \bibemph{philosopher,} and religion cannot exist without the real experience of the \bibemph{religionist} who, in and through this very experience, is seeking to find God and to know him. Likewise is the universe of universes without significance apart from the I AM, the infinite God who made it and unceasingly manages it.
 \vs p195 7:19 \pc Mechanists --- humanists --- tend to drift with the material currents. Idealists and spiritists \bibemph{dare} to use their oars with intelligence and vigour in order to modify the apparently purely material course of the energy streams.
 \vs p195 7:20 \pc Science lives by the mathematics of the mind; music expresses the tempo of the emotions. Religion is the spiritual rhythm of the soul in time\hyp{}space harmony with the higher and eternal melody measurements of Infinity. Religious experience is something in human life which is truly supermathematical.
-\vs p195 7:21 In language, an alphabet represents the mechanism of materialism, while the words expressive of the meaning of 1,000 thoughts, grand ideas, and noble ideals --- of love and hate, of cowardice and courage --- represent the performances of mind within the scope defined by both material and spiritual law, directed by the assertion of the will of personality, and limited by the inherent situational endowment.
+\vs p195 7:21 In language, an alphabet represents the mechanism of materialism, while the words expressive of the meaning of a thousand thoughts, grand ideas, and noble ideals --- of love and hate, of cowardice and courage --- represent the performances of mind within the scope defined by both material and spiritual law, directed by the assertion of the will of personality, and limited by the inherent situational endowment.
 \vs p195 7:22 The universe is not like the laws, mechanisms, and the uniformities which the scientist discovers, and which he comes to regard as science, but rather like the curious, thinking, choosing, creative, combining, and discriminating \bibemph{scientist} who thus observes universe phenomena and classifies the mathematical facts inherent in the mechanistic phases of the material side of creation. Neither is the universe like the art of the artist, but rather like the striving, dreaming, aspiring, and advancing \bibemph{artist} who seeks to transcend the world of material things in an effort to achieve a spiritual goal.
 \vs p195 7:23 The scientist, not science, perceives the reality of an evolving and advancing universe of energy and matter. The artist, not art, demonstrates the existence of the transient morontia world intervening between material existence and spiritual liberty. The religionist, not religion, proves the existence of the spirit realities and divine values which are to be encountered in the progress of eternity.
 \usection{Secular Totalitarianism}
@@ -169,7 +169,7 @@
 \vs p195 10:15 These various groupings of Christians may serve to accommodate numerous different types of would\hyp{}be believers among the various peoples of Western civilization, but such division of Christendom presents a grave weakness when it attempts to carry the gospel of Jesus to Oriental peoples. These races do not yet understand that there is a \bibemph{religion of Jesus} separate, and somewhat apart, from Christianity, which has more and more become a \bibemph{religion about Jesus.}
 \vs p195 10:16 The great hope of Urantia lies in the possibility of a new revelation of Jesus with a new and enlarged presentation of his saving message which would spiritually unite in loving service the numerous families of his present\hyp{}day professed followers.
 \vs p195 10:17 Even secular education could help in this great spiritual renaissance if it would pay more attention to the work of teaching youth how to engage in life planning and character progression. The purpose of all education should be to foster and further the supreme purpose of life, the development of a majestic and well\hyp{}balanced personality. There is great need for the teaching of moral discipline in the place of so much self\hyp{}gratification. Upon such a foundation religion may contribute its spiritual incentive to the enlargement and enrichment of mortal life, even to the security and enhancement of life eternal.
-\vs p195 10:18 Christianity is an extemporized religion, and therefore must it operate in low gear. High\hyp{}gear spiritual performances must await the new revelation and the more general acceptance of the real religion of Jesus. But Christianity is a mighty religion, seeing that the commonplace disciples of a crucified carpenter set in motion those teachings which conquered the Roman world in 300 years and then went on to triumph over the barbarians who overthrew Rome. This same Christianity conquered --- absorbed and exalted --- the whole stream of Hebrew theology and Greek philosophy. And then, when this Christian religion became comatose for more than 1,000 years as a result of an overdose of mysteries and paganism, it resurrected itself and virtually reconquered the whole Western world. Christianity contains enough of Jesus’ teachings to immortalize it.
+\vs p195 10:18 Christianity is an extemporized religion, and therefore must it operate in low gear. High\hyp{}gear spiritual performances must await the new revelation and the more general acceptance of the real religion of Jesus. But Christianity is a mighty religion, seeing that the commonplace disciples of a crucified carpenter set in motion those teachings which conquered the Roman world in 300 years and then went on to triumph over the barbarians who overthrew Rome. This same Christianity conquered --- absorbed and exalted --- the whole stream of Hebrew theology and Greek philosophy. And then, when this Christian religion became comatose for more than a thousand years as a result of an overdose of mysteries and paganism, it resurrected itself and virtually reconquered the whole Western world. Christianity contains enough of Jesus’ teachings to immortalize it.
 \vs p195 10:19 If Christianity could only grasp more of Jesus’ teachings, it could do so much more in helping modern man to solve his new and increasingly complex problems.
 \vs p195 10:20 Christianity suffers under a great handicap because it has become identified in the minds of all the world as a part of the social system, the industrial life, and the moral standards of Western civilization; and thus has Christianity unwittingly seemed to sponsor a society which staggers under the guilt of tolerating science without idealism, politics without principles, wealth without work, pleasure without restraint, knowledge without character, power without conscience, and industry without morality.
 \vs p195 10:21 The hope of modern Christianity is that it should cease to sponsor the social systems and industrial policies of Western civilization while it humbly bows itself before the cross it so valiantly extols, there to learn anew from Jesus of Nazareth the greatest truths mortal man can ever hear --- the living gospel of the fatherhood of God and the brotherhood of man.
