--- a/tex/p012.tex
+++ b/tex/p012.tex
@@ -31,9 +31,9 @@
 \vs p012 1:16 The central universe is the creation of eternity; the seven superuniverses are the creations of time; the four outer space levels are undoubtedly destined to eventuate\hyp{}evolve the ultimacy of creation. And there are those who maintain that the Infinite can never attain full expression short of infinity; and therefore do they postulate an additional and unrevealed creation beyond the fourth and outermost space level, a possible ever\hyp{}expanding, never\hyp{}ending universe of infinity. In theory we do not know how to limit either the infinity of the Creator or the potential infinity of creation, but as it exists and is administered, we regard the master universe as having limitations, as being definitely delimited and bounded on its outer margins by open space.
 \usection{The Domains of the Unqualified Absolute}
 \vs p012 2:1 When Urantia astronomers peer through their increasingly powerful telescopes into the mysterious stretches of outer space and there behold the amazing evolution of almost countless physical universes, they should realize that they are gazing upon the mighty outworking of the unsearchable plans of the Architects of the Master Universe. True, we do possess evidences which are suggestive of the presence of certain Paradise personality influences here and there throughout the vast energy manifestations now characteristic of these outer regions, but from the larger viewpoint the space regions extending beyond the outer borders of the seven superuniverses are generally recognized as constituting the domains of the Unqualified Absolute.
-\vs p012 2:2 Although the unaided human eye can see only two or three nebulae outside the borders of the superuniverse of Orvonton, your telescopes literally reveal millions upon millions of these physical universes in process of formation. Most of the starry realms visually exposed to the search of your present\hyp{}day telescopes are in Orvonton, but with photographic technique the larger telescopes penetrate far beyond the borders of the grand universe into the domains of outer space, where untold universes are in process of organization. And there are yet other millions of universes beyond the range of your present instruments.
-\vs p012 2:3 In the not\hyp{}distant future, new telescopes will reveal to the wondering gaze of Urantian astronomers no less than 375,000,000 new galaxies in the remote stretches of outer space. At the same time these more powerful telescopes will disclose that many island universes formerly believed to be in outer space are really a part of the galactic system of Orvonton. The seven superuniverses are still growing; the periphery of each is gradually expanding; new nebulae are constantly being stabilized and organized; and some of the nebulae which Urantian astronomers regard as extragalactic are actually on the fringe of Orvonton and are travelling along with us.
-\vs p012 2:4 \pc The Uversa star students observe that the grand universe is surrounded by the ancestors of a series of starry and planetary clusters which completely encircle the present inhabited creation as concentric rings of outer universes upon universes. The physicists of Uversa calculate that the energy and matter of these outer and uncharted regions already equal many times the total material mass and energy charge embraced in all seven superuniverses. We are informed that the metamorphosis of cosmic force in these outer space levels is a function of the Paradise force organizers. We also know that these forces are ancestral to those physical energies which at present activate the grand universe. The Orvonton power directors, however, have nothing to do with these far\hyp{}distant realms, neither are the energy movements therein discernibly connected with the power circuits of the organized and inhabited creations.
+\vs p012 2:2 Although the unaided human eye can see only two or three nebulae\fnst{\textbf{two or three nebulae}, That is galaxies. Unaided eye can see only two galaxies in the Northern Hemisphere: M31 (Andromeda) and M33 (Triangulum). These very objects are mentioned in the book \cite{Baker1}, which served as one of the sources of this paper. The Large and Small Magellanic Clouds are visible only in the Southern Hemisphere and are considered to be the sattelites of our Galaxy. Therefore, the Andromeda galaxy is situated \bibemph{outside the borders of the superuniverse of Orvonton}. See also \bibref[15:4.7]{p015 4:7}.} outside the borders of the superuniverse of Orvonton, your telescopes literally reveal millions upon millions of these physical universes in process of formation. Most of the starry realms visually exposed to the search of your present\hyp{}day telescopes are in Orvonton, but with photographic technique the larger telescopes penetrate far beyond the borders of the grand universe into the domains of outer space, where untold universes are in process of organization. And there are yet other millions of universes beyond the range of your present instruments.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/M31.jpg}\caption{Andromeda galaxy (М31)}\end{figure}}
+\vs p012 2:3 In the not\hyp{}distant future, new telescopes\fnst{\textbf{new telescopes}, According to \cite{Baker1} the ``new'' 200\hyp{}inch telescope Hale, sponsored by the Rockefeller Foundation in 1928 is meant here. It was being built from 1936 until 1948.} will reveal to the wondering gaze of Urantian astronomers no less than 375,000,000 new galaxies in the remote stretches of outer space. At the same time these more powerful telescopes will disclose that many island universes formerly believed to be in outer space are really a part of the galactic system of Orvonton. The seven superuniverses are still growing; the periphery of each is gradually expanding; new nebulae are constantly being stabilized and organized; and some of the nebulae which Urantian astronomers regard as extragalactic are actually on the fringe of Orvonton and are travelling along with us.\fnst{\textbf{travelling along with us}, Perhaps the Large and Small Magellanic Clouds are meant here.}\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Hale-200inch.jpg}\caption{200\hyp{}inch telescope George Ellery Hale in San Diego, California, USA}\end{figure}}
+\vs p012 2:4 \pc The Uversa star students observe that the grand universe is surrounded by the ancestors of a series of starry and planetary clusters which completely encircle the present inhabited creation as concentric rings of outer universes upon universes. The physicists of Uversa calculate that the energy and matter of these outer and uncharted regions already equal many times the total material mass and energy charge embraced in all seven superuniverses. We are informed that the metamorphosis of cosmic force in these outer space levels is a function of the Paradise force organizers. We also know that these forces are ancestral to those physical energies which at present activate the grand universe. The Orvonton power directors, however, have nothing to do with these far\hyp{}distant realms, neither are the energy movements therein discernibly connected with the power circuits of the organized and inhabited creations.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/LMC.jpg}\caption{Large and Small Magellanic Clouds}\end{figure}}
 \vs p012 2:5 \pc We know very little of the significance of these tremendous phenomena of outer space. A greater creation of the future is in process of formation. We can observe its immensity, we can discern its extent and sense its majestic dimensions, but otherwise we know little more about these realms than do the astronomers of Urantia. As far as we know, no material beings on the order of humans, no angels or other spirit creatures, exist in this outer ring of nebulae, suns, and planets. This distant domain is beyond the jurisdiction and administration of the superuniverse governments.
 \vs p012 2:6 Throughout Orvonton it is believed that a new type of creation is in process, an order of universes destined to become the scene of the future activities of the assembling Corps of the Finality; and if our conjectures are correct, then the endless future may hold for all of you the same enthralling spectacles that the endless past has held for your seniors and predecessors.
 \usection{Universal Gravity}
@@ -63,7 +63,7 @@
 \vs p012 4:11 \ublistelem{4.}\bibnobreakspace Compensatory or correlating movement designed to co\hyp{}ordinate all other motions.
 \vs p012 4:12 \pc The present relationship of your sun and its associated planets, while disclosing many relative and absolute motions in space, tends to convey the impression to astronomic observers that you are comparatively stationary in space, and that the surrounding starry clusters and streams are engaged in outward flight at ever\hyp{}increasing velocities as your calculations proceed outward in space. But such is not the case. You fail to recognize the present outward and uniform expansion of the physical creations of all pervaded space. Your own local creation (Nebadon) participates in this movement of universal outward expansion. The entire seven superuniverses participate in the two\hyp{}billion\hyp{}year cycles of space respiration along with the outer regions of the master universe.
 \vs p012 4:13 When the universes expand and contract, the material masses in pervaded space alternately move against and with the pull of Paradise gravity. The work that is done in moving the material energy mass of creation is \bibemph{space} work but not \bibemph{power\hyp{}energy} work.
-\vs p012 4:14 \pc Although your spectroscopic estimations of astronomic velocities are fairly reliable when applied to the starry realms belonging to your superuniverse and its associate superuniverses, such reckonings with reference to the realms of outer space are wholly unreliable. Spectral lines are displaced from the normal towards the violet by an approaching star; likewise these lines are displaced towards the red by a receding star. Many influences interpose to make it appear that the recessional velocity of the external universes increases at the rate of more than 160 km/s for every 1,000,000 light\hyp{}years increase in distance. By this method of reckoning, subsequent to the perfection of more powerful telescopes, it will appear that these far\hyp{}distant systems are in flight from this part of the universe at the unbelievable rate of more than 48,000 km/s. But this apparent speed of recession is not real; it results from numerous factors of error embracing angles of observation and other time\hyp{}space distortions.
+\vs p012 4:14 \pc Although your spectroscopic estimations of astronomic velocities are fairly reliable when applied to the starry realms belonging to your superuniverse and its associate superuniverses, such reckonings with reference to the realms of outer space are wholly unreliable. Spectral lines are displaced from the normal towards the violet by an approaching star; likewise these lines are displaced towards the red by a receding star. Many influences interpose to make it appear that the recessional velocity of the external universes increases at the rate of more than 160 km/s for every 1,000,000 light\hyp{}years\fnst{The value of Hubble constant given in the text (522\,km/s/Mpc) is very close to the value obtained by Hubble himself in 1935: 535\,km/s/Mpc. Hubble's calculations were based on the dependence between the period and luminosity of variable stars called Cepheids. The revision of the base point of this dependence by W.~Baade in 1952 led to the significant correction of the value of Hubble's constant. By 1955 the accepted value became 180\,km/s/Mpc and the modern (2016) value is even smaller: 6,93$\pm$0,62\,km/s/Mpc.} increase in distance. By this method of reckoning, subsequent to the perfection of more powerful telescopes, it will appear that these far\hyp{}distant systems are in flight from this part of the universe at the unbelievable rate of more than 48,000 km/s. But this apparent speed of recession is not real; it results from numerous factors of error embracing angles of observation and other time\hyp{}space distortions.
 \vs p012 4:15 But the greatest of all such distortions arises because the vast universes of outer space, in the realms\fnc{\textbf{outer space, in the realms}, In 1955 text no comma.} next to the domains of the seven superuniverses, seem to be revolving in a direction opposite to that of the grand universe. That is, these myriads of nebulae and their accompanying suns and spheres are at the present time revolving clockwise about the central creation. The seven superuniverses revolve about Paradise in a counterclockwise direction. It appears that the second outer universe of galaxies, like the seven superuniverses, revolves counterclockwise about Paradise. And the astronomic observers of Uversa think they detect evidence of revolutionary movements in a third outer belt of far\hyp{}distant space which are beginning to exhibit directional tendencies of a clockwise nature.
 \vs p012 4:16 It is probable that these alternate directions of successive space processions of the universes have something to do with the intramaster universe gravity technique of the Universal Absolute, which consists of a co\hyp{}ordination of forces and an equalization of space tensions. Motion as well as space is a complement or equilibrant of gravity.
 \usection{Space and Time}
@@ -94,9 +94,9 @@
 \vs p012 6:13 \pc The Unqualified Absolute pervades all space. We are not altogether clear as to the exact status of the Deity and Universal Absolutes, but we know the latter functions wherever the Deity and Unqualified Absolutes function. The Deity Absolute may be universally present but hardly space present. The Ultimate is, or sometime will be, space present to the outer margins of the fourth space level. We doubt that the Ultimate will ever have a space presence beyond the periphery of the master universe, but within this limit the Ultimate is progressively integrating the creative organization of the potentials of the three Absolutes.
 \usection{The Part and the Whole}
 \vs p012 7:1 There is operative throughout all time and space and with regard to all reality of whatever nature an inexorable and impersonal law which is equivalent to the function of a cosmic providence. Mercy characterizes God’s attitude of love for the individual; impartiality motivates God’s attitude toward the total. The will of God does not necessarily prevail in the part --- the heart of any one personality --- but his will does actually rule the whole, the universe of universes.
-\vs p012 7:2 \pc In all his dealings with all his beings it is true that the laws of God are not inherently arbitrary. To you, with your limited vision and finite viewpoint, the acts of God must often appear to be dictatorial and arbitrary. The laws of God are merely the habits of God, his way of repeatedly doing things; and he ever does all things well. You observe that God does the same thing in the same way, repeatedly, simply because that is the best way to do that particular thing in a given circumstance; and the best way is the right way, and therefore does infinite wisdom always order it done in that precise and perfect manner. You should also remember that nature is not the exclusive act of Deity; other influences are present in those phenomena which man calls nature.
+\vs p012 7:2 \pc In all his dealings with all his beings it is true that the laws of God are not inherently arbitrary. To you, with your limited vision and finite viewpoint, the acts of God must often appear to be dictatorial and arbitrary. The laws of God are merely the habits of God\fnst{\textbf{The laws of God are merely the habits of God}, This thought comes from \cite{Strong1}.}, his way of repeatedly doing things; and he ever does all things well. You observe that God does the same thing in the same way, repeatedly, simply because that is the best way to do that particular thing in a given circumstance; and the best way is the right way, and therefore does infinite wisdom always order it done in that precise and perfect manner. You should also remember that nature is not the exclusive act of Deity; other influences are present in those phenomena which man calls nature.
 \vs p012 7:3 It is repugnant to the divine nature to suffer any sort of deterioration or ever to permit the execution of any purely personal act in an inferior way. It should be made clear, however, that, \bibemph{if,} in the divinity of any situation, in the extremity of any circumstance, in any case where the course of supreme wisdom might indicate the demand for different conduct --- if the demands of perfection might for any reason dictate another method of reaction, a better one, then and there would the all\hyp{}wise God function in that better and more suitable way. That would be the expression of a higher law, not the reversal of a lower law.
-\vs p012 7:4 God is not a habit\hyp{}bound slave to the chronicity of the repetition of his own voluntary acts. There is no conflict among the laws of the Infinite; they are all perfections of the infallible nature; they are all the unquestioned acts expressive of faultless decisions. Law is the unchanging reaction of an infinite, perfect, and divine mind. The acts of God are all volitional notwithstanding this apparent sameness. In God there “is no variableness neither shadow of changing.” But all this which can be truly said of the Universal Father cannot be said with equal certainty of all his subordinate intelligences or of his evolutionary creatures.
+\vs p012 7:4 God is not a habit\hyp{}bound slave to the chronicity of the repetition of his own voluntary acts. There is no conflict among the laws of the Infinite; they are all perfections of the infallible nature; they are all the unquestioned acts expressive of faultless decisions. Law is the unchanging reaction of an infinite, perfect, and divine mind. The acts of God are all volitional notwithstanding this apparent sameness. In God there “is no variableness neither shadow of changing.”\fnst{See James~1:17.} But all this which can be truly said of the Universal Father cannot be said with equal certainty of all his subordinate intelligences or of his evolutionary creatures.
 \vs p012 7:5 Because God is changeless, therefore can you depend, in all ordinary circumstances, on his doing the same thing in the same identical and ordinary way. God is the assurance of stability for all created things and beings. He is God; therefore he changes not.
 \vs p012 7:6 And all this steadfastness of conduct and uniformity of action is personal, conscious, and highly volitional, for the great God is not a helpless slave to his own perfection and infinity. God is not a self\hyp{}acting automatic force; he is not a slavish law\hyp{}bound power. God is neither a mathematical equation nor a chemical formula. He is a freewill and primal personality. He is the Universal Father, a being surcharged with personality and the universal fount of all creature personality.
 \vs p012 7:7 \pc The will of God does not uniformly prevail in the heart of the God\hyp{}seeking material mortal, but if the time frame is enlarged beyond the moment to embrace the whole of the first life, then does God’s will become increasingly discernible in the spirit fruits which are borne in the lives of the spirit\hyp{}led children of God. And then, if human life is further enlarged to include the morontia experience, the divine will is observed to shine brighter and brighter in the spiritualizing acts of those creatures of time who have begun to taste the divine delights of experiencing the relationship of the personality of man with the personality of the Universal Father.
@@ -127,10 +127,24 @@
 \usection{Personal Realities}
 \vs p012 9:1 Spirit is the basic personal reality in the universes, and personality is basic to all progressing experience with spiritual reality. Every phase of personality experience on every successive level of universe progression swarms with clues to the discovery of alluring personal realities. Man’s true destiny consists in the creation of new and spirit goals and then in responding to the cosmic allurements of such supernal goals of nonmaterial value.
 \vs p012 9:2 \pc Love is the secret of beneficial association between personalities. You cannot really know a person as the result of a single contact. You cannot appreciatingly know music through mathematical deduction, even though music is a form of mathematical rhythm. The number assigned to a telephone subscriber does not in any manner identify the personality of that subscriber or signify anything concerning his character.
-\vs p012 9:3 Mathematics, material science, is indispensable to the intelligent discussion of the material aspects of the universe, but such knowledge is not necessarily a part of the higher realization of truth or of the personal appreciation of spiritual realities. Not only in the realms of life but even in the world of physical energy, the sum of two or more things is very often something \bibemph{more} than, or something \bibemph{different} from, the predictable additive consequences of such unions. The entire science of mathematics, the whole domain of philosophy, the highest physics or chemistry, could not predict or know that the union of two gaseous hydrogen atoms with one gaseous oxygen atom would result in a new and qualitatively superadditive substance --- liquid water. The understanding knowledge of this one physiochemical phenomenon should have prevented the development of materialistic philosophy and mechanistic cosmology.
+\vs p012 9:3 Mathematics\fnst{Mathematics is a creation of the material mind just like the morontia mathematics corresponds to the morontia type of mind, see \bibref[112:1.11]{p112 1:11}.}, material science, is indispensable to the intelligent discussion of the material aspects of the universe, but such knowledge is not necessarily a part of the higher realization of truth or of the personal appreciation of spiritual realities. Not only in the realms of life but even in the world of physical energy, the sum of two or more things is very often something \bibemph{more} than, or something \bibemph{different} from, the predictable additive consequences of such unions. The entire science of mathematics, the whole domain of philosophy, the highest physics or chemistry, could not predict or know that the union of two gaseous hydrogen atoms with one gaseous oxygen atom would result in a new and qualitatively superadditive substance --- liquid water. The understanding knowledge of this one physiochemical phenomenon should have prevented the development of materialistic philosophy and mechanistic cosmology.
 \vs p012 9:4 Technical analysis does not reveal what a person or a thing can do. For example: Water is used effectively to extinguish fire. That water will put out fire is a fact of everyday experience, but no analysis of water could ever be made to disclose such a property. Analysis determines that water is composed of hydrogen and oxygen; a further study of these elements discloses that oxygen is the real supporter of combustion and that hydrogen will itself freely burn.
 \vs p012 9:5 Your religion is becoming real because it is emerging from the slavery of fear and the bondage of superstition. Your philosophy struggles for emancipation from dogma and tradition. Your science is engaged in the agelong contest between truth and error while it fights for deliverance from the bondage of abstraction, the slavery of mathematics, and the relative blindness of mechanistic materialism.
 \vs p012 9:6 \pc Mortal man has a spirit nucleus. The mind is a personal\hyp{}energy system existing around a divine spirit nucleus and functioning in a material environment. Such a living relationship of personal mind and spirit constitutes the universe potential of eternal personality. Real trouble, lasting disappointment, serious defeat, or inescapable death can come only after self\hyp{}concepts presume fully to displace the governing power of the central spirit nucleus, thereby disrupting the cosmic scheme of personality identity.
 \vsetoff
 \vs p012 9:7 [Presented by a Perfector of Wisdom acting by authority of the Ancients of Days.]
 \quizlink
+\begin{thebibliography}{100}
+\bibitem{Baker1}
+Robert H. Baker, Ph.D.
+{<<The Universe Unfolding: A Story of Man's Increasing Comprehension of the Universe Around Him.>>}
+{\em Baltimore: The Williams \&\ Wilkins Company}, 1932.
+\bibitem{Strong1}
+Rev.~Josiah Strong, D.D.
+{<<The New World\hyp{}Religion.>>}
+{\em Garden City, New York: Doubleday, Page \& Company}, 1915.
+\bibitem{Overstreet1}
+H.A. Overstreet
+{<<The Enduring Quest: A Search for a Philosophy of Life>>.}
+{\em New York: W. Norton \&\ Company, Inc.}, 1931.
+\end{thebibliography}
