Added an illustration

--- a/tex/p015.tex
+++ b/tex/p015.tex
@@ -82,7 +82,7 @@
 \vs p015 5:2 As to origin, the majority of the suns, planets, and other spheres can be classified in one of the following ten groups:
 \vs p015 5:3 \ublistelem{1.}\bibnobreakspace \bibemph{Concentric Contraction Rings.} Not all nebulae are spiral. Many an immense nebula, instead of splitting into a double star system or evolving as a spiral, undergoes condensation by multiple\hyp{}ring formation. For long periods such a nebula appears as an enormous central sun surrounded by numerous gigantic clouds of encircling, ring\hyp{}appearing formations of matter.
 \vs p015 5:4 \ublistelem{2.}\bibnobreakspace \bibemph{The Whirled Stars} embrace those suns which are thrown off the great mother wheels of highly heated gases. They are not thrown off as rings but in right\hyp{} and left\hyp{}handed processions. Whirled stars are also of origin in other\hyp{}than\hyp{}spiral nebulae.
-\vs p015 5:5 \ublistelem{3.}\bibnobreakspace \bibemph{Gravity\hyp{}explosion Planets.} When a sun is born of a spiral or of a barred nebula, not infrequently it is thrown out a considerable distance. Such a sun is highly gaseous, and subsequently, after it has somewhat cooled and condensed, it may chance to swing near some enormous mass of matter, a gigantic sun or a dark island of space. Such an approach may not be near enough to result in collision but still near enough to allow the gravity pull of the greater body to start tidal convulsions in the lesser, thus initiating a series of tidal upheavals which occur simultaneously on opposite sides of the convulsed sun. At their height these explosive eruptions produce a series of varying\hyp{}sized aggregations of matter which may be projected beyond the gravity\hyp{}reclamation zone of the erupting sun, thus becoming stabilized in orbits of their own around one of the two bodies concerned in this episode. Later on the larger collections of matter unite and gradually draw the smaller bodies to themselves. In this way many of the solid planets of the lesser systems are brought into existence. Your own solar system had just such an origin.
+\vs p015 5:5 \ublistelem{3.}\bibnobreakspace \bibemph{Gravity\hyp{}explosion Planets.} When a sun is born of a spiral or of a barred nebula, not infrequently it is thrown out a considerable distance. Such a sun is highly gaseous, and subsequently, after it has somewhat cooled and condensed, it may chance to swing near some enormous mass of matter, a gigantic sun or a dark island of space. Such an approach may not be near enough to result in collision but still near enough to allow the gravity pull of the greater body to start tidal convulsions in the lesser, thus initiating a series of tidal upheavals which occur simultaneously on opposite sides of the convulsed sun. At their height these explosive eruptions produce a series of varying\hyp{}sized aggregations of matter which may be projected beyond the gravity\hyp{}reclamation zone of the erupting sun, thus becoming stabilized in orbits of their own around one of the two bodies concerned in this episode. Later on the larger collections of matter unite and gradually draw the smaller bodies to themselves. In this way many of the solid planets of the lesser systems are brought into existence. Your own solar system had just such an origin.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=0.99\columnwidth]{images/NGC1300.jpg}\caption{Example of a barred galaxy (``nebula''): NGC 1300}\end{figure}}
 \vs p015 5:6 \ublistelem{4.}\bibnobreakspace \bibemph{Centrifugal Planetary Daughters.} Enormous suns, when in certain stages of development, and if their revolutionary rate greatly accelerates, begin to throw off large quantities of matter which may subsequently be assembled to form small worlds that continue to encircle the parent sun.
 \vs p015 5:7 \ublistelem{5.}\bibnobreakspace \bibemph{Gravity\hyp{}deficiency Spheres.} There is a critical limit to the size of individual stars. When a sun reaches this limit, unless it slows down in revolutionary rate, it is doomed to split; sun fission occurs, and a new double star of this variety is born. Numerous small planets may be subsequently formed as a by\hyp{}product of this gigantic disruption.
 \vs p015 5:8 \ublistelem{6.}\bibnobreakspace \bibemph{Contractural Stars.} In the smaller systems the largest outer planet sometimes draws to itself its neighbouring worlds, while those planets near the sun begin their terminal plunge. With your solar system, such an end would mean that the four inner planets would be claimed by the sun, while the major planet, Jupiter, would be greatly enlarged by capturing the remaining worlds. Such an end of a solar system would result in the production of two adjacent but unequal suns, one type of double star formation. Such catastrophes are infrequent except out on the fringe of the superuniverse starry aggregations.
