--- a/tex/p018.tex
+++ b/tex/p018.tex
@@ -31,7 +31,7 @@
 \vs p018 2:3 Except for the established orders of life, such as the Havona natives and other living creatures of the central universe, the resident Eternals of Days have developed their respective spheres entirely in accordance with their own personal ideas and ideals. They visit each other’s planets, but they do not copy or imitate; they are always and wholly original.
 \vs p018 2:4 The architecture, natural embellishment, morontia structures, and spirit creations are exclusive and unique on each sphere. Every world is a place of everlasting beauty and is wholly unlike any other world in the central universe. And you will each spend a longer or shorter time on each of these unique and thrilling spheres on your way inward through Havona to Paradise. It is natural, on your world, to speak of Paradise as \bibemph{upward,} but it would be more correct to refer to the divine goal of ascension as \bibemph{inward.}
 \usection{The Ancients of Days}
-\vs p018 3:1 When mortals of time graduate from the training worlds surrounding the headquarters of a local universe and are advanced to the educational spheres of their superuniverse, they have progressed in spiritual development to that point where they are able to recognize and communicate with the high spiritual rulers and directors of these advanced realms, including the Ancients of Days.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=0.64\columnwidth]{images/Blake-The-Ancient-of-Days.jpg}\caption{The Ancient of Days by William Blake}\end{figure}}
+\vs p018 3:1 When mortals of time graduate from the training worlds surrounding the headquarters of a local universe and are advanced to the educational spheres of their superuniverse, they have progressed in spiritual development to that point where they are able to recognize and communicate with the high spiritual rulers and directors of these advanced realms, including the Ancients of Days.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=\tunemarkup{pgkoboaurahd}{0.86}\columnwidth]{images/Blake-The-Ancient-of-Days.jpg}\caption{The Ancient of Days by William Blake}\end{figure}}
 \vs p018 3:2 The Ancients of Days are all basically identical; they disclose the combined character and unified nature of the Trinity. They possess individuality and are in personality diverse, but they do not differ from each other as do the Seven Master Spirits. They provide the uniform directorship of the otherwise differing seven superuniverses, each of which is a distinct, segregated, and unique creation. The Seven Master Spirits are unlike in nature and attributes, but the Ancients of Days, the personal rulers of the superuniverses, are all uniform and superperfect offspring of the Paradise Trinity.
 \vs p018 3:3 The Seven Master Spirits on high determine the \bibemph{nature} of their respective superuniverses, but the Ancients of Days dictate the \bibemph{administration} of these same superuniverses. They superimpose administrative uniformity on creative diversity and ensure the harmony of the whole in the face of the underlying creational differences of the seven segmental groupings of the grand universe.
 \vs p018 3:4 \pc The Ancients of Days were all trinitized at the same time. They represent the beginning of the personality records of the universe of universes, hence their name --- \bibemph{Ancients} of Days. When you reach Paradise and search the written records of the beginning of things, you will find that the first entry appearing in the personality section is the recital of the trinitization of these 21 Ancients of Days.
