--- a/tex/title.tex
+++ b/tex/title.tex
@@ -36,7 +36,7 @@ THE BRITISH \tunemarkuptwo{nofnt}{TEXT}{STUDY} EDITION\\
 \tunemarkup{pgauraone}{\fontsize{12}{20}\selectfont}
 OF\\
 \tunemarkup{pgcrownq}{\fontsize{30}{38}\selectfont}
-\tunemarkup{pgafour}{\fontsize{32.5}{38}\selectfont}
+\tunemarkup{pgafour}{\fontsize{34}{38}\selectfont}
 \tunemarkup{pgkindledx}{\fontsize{25}{32}\selectfont}
 \tunemarkup{pghanlin}{\fontsize{9}{20}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{20}{23}\selectfont}
@@ -52,7 +52,7 @@ OF\\
 \tunemarkup{pghanlin}{\fontsize{10}{13}\selectfont}
 \tunemarkup{pgkindledx}{\fontsize{16}{18}\selectfont}
 \tunemarkup{pgcrownq}{\fontsize{19}{24}\selectfont}
-\tunemarkup{pgafour}{\fontsize{21}{24}\selectfont}
+\tunemarkup{pgafour}{\fontsize{21}{28}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{10}{12}\selectfont}
 \tunemarkup{pgthinmob}{\fontsize{10}{12}\selectfont}
 \tunemarkup{pgnexus10}{\fontsize{15}{22}\selectfont}
@@ -97,7 +97,7 @@ Edited by Tigran Aivazian\\[2ex]
 \tunemarkup{pgnexus10}{\fontsize{12}{16}\itshape}
 \tunemarkup{pgkindledx}{\fontsize{10}{12}\itshape}
 \tunemarkup{pgcrownq}{\Large\itshape}
-\tunemarkup{pgafour}{\Large\itshape}
+\tunemarkup{pgafour}{\large\itshape}
 \parbox{0.9\linewidth}{\centering
 \textbf{\upshape\nocopyright\ No copyright is claimed on this book\\
 The text of \bibemph{The Urantia Papers} is in the public domain.}\\[5pt]
