--- a/urantia-study-edition.tex
+++ b/urantia-study-edition.tex
@@ -15,9 +15,10 @@
 \tunemarkup{pgauraone}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\include{tex/paper-titles}}
 \tunemarkup{pgkobomini}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents{}}
 \tunemarkup{pgkindledx}{\include{tex/paper-titles}}
-\tunemarkup{pgafour}{\include{tex/paper-titles}}
+\tunemarkup{pgafour}{\clp\include{tex/paper-titles}}
 \tunemarkup{pgcrownq}{\include{tex/paper-titles}}
-\tunemarkup{introinclude}{\include{tex/intro}}
+\tunemarkuptwo{pgafour}{\clp}{}
+\include{tex/intro}
 \parti
 \include{tex/p000}
 \include{tex/p001}
