--- a/ubook.sty
+++ b/ubook.sty
@@ -58,7 +58,17 @@
 \RequirePackage{lettrine}
 \setcounter{DefaultLines}{3}
 
-\RequirePackage[plainpages=false,hyperfootnotes=false,pdfpagelabels,colorlinks,linkcolor=blue,anchorcolor=black,citecolor=black,filecolor=black,menucolor=black,pagecolor=black,urlcolor=blue]{hyperref}
+\RequirePackage[plainpages=false,%
+                hyperfootnotes=false,%
+                pdfpagelabels,%
+                colorlinks,%
+                linkcolor=\tunemarkup{pgnexus7}{blue}\tunemarkup{pgnexus10}{blue}\tunemarkup{pgthinmob}{blue}\tunemarkup{pgkoboaurahd}{black}\tunemarkup{pgkoboauraone}{black}\tunemarkup{pgkobomini}{black}\tunemarkup{pgafour}{black},%
+                anchorcolor=black,%
+                citecolor=black,%
+                filecolor=black,%
+                menucolor=black,%
+                pagecolor=black,%
+                urlcolor=\tunemarkup{pgnexus7}{blue}\tunemarkup{pgnexus10}{blue}\tunemarkup{pgthinmob}{blue}\tunemarkup{pgkoboaurahd}{black}\tunemarkup{pgkoboauraone}{black}\tunemarkup{pgkobomini}{black}\tunemarkup{pgafour}{black}]{hyperref}
 
 \protected\def\bib@raise@anchor#1{%
   \ifhmode
