Enable quiz and use Garamond by default

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -26,8 +26,8 @@
 \patchcmd{\thebibliography}{\chapter*}{\section*}{}{}
 
 % various font families
-\tunemarkuptag{basker}
-%\tunemarkuptag{garamond}
+%\tunemarkuptag{basker}
+\tunemarkuptag{garamond}
 
 % comment out for NO page break BEFORE Part title
 %\tunemarkuptag{beforepartnewpage}
@@ -54,7 +54,7 @@
 %\tunemarkuptag{coverimage}
 
 % comment out to enable Cosmic Citizenship Quiz
-\tunemarkuptag{noquiz}
+%\tunemarkuptag{noquiz}
 
 \setdefaultlanguage{english}
 
